LOGIN AND FORGOT PASS FORNTEND

--- a/templates/forget_password/password_reset.html
+++ b/templates/forget_password/password_reset.html
@@ -1,24 +1,70 @@
+{% load static %}
+<!DOCTYPE html>
+<html>
+    <head>
+        <link rel="stylesheet" href="{% static 'login/resetpass.css' %}">
+        <title>LOGIN</title>
+        {% for message in messages %}
+        <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+            <strong>Message:</strong>{{ message }}
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        {% endfor %}
+    </head>
+    <body>
+
+        <div class="right-design">
+
+            <div class="middle-section">
+                <img src="{% static 'login/lspu.png' %}" class="lspu-logo">
+            </div>
+
+            
+        </div>
+
+        <div class="left-design">
+
+            <div>
+                <img src="{% static 'login/top.png' %}" class="top">
+            </div>
+
+            <div>
+                <img src="{% static 'login/bot.png' %}" class="bot">
+            </div>
+
+        </div>
 
 
-
+        <div class="login-form-container">
 	<!--Reset Password-->
+						<div class="title-container">
+							<img src="{% static 'login/lock.png' %}" class="lock-logo">
+							<h1 class="title">Forgot Password</h1>
+						</div>
 
-	
-        <form method="POST">
-			
-           {% csrf_token %}  
-			  <h1 class="h3 mb-3 fw-normal">Forgot Password</h1>
-			  <div class="frnote">
-				<h2>Please enter the email address you’d like your</h2> 
-					<h2>password reset information sent to. </h2>
-			  </div>
-			  <div>
-				<input class ="fremail" type="email" name="email" id="email" placeholder= "&#61447; Enter Email" style="font-family:FontAwesome , 'Inter'" required>
-				</div>
-		
-				<button class="frsubmit" type="submit">Send</button>
-				<button class="frback" type="submit">Back to Login</button>
-        </form>
+					<form method="POST">
+				
+							{% csrf_token %}  
+						<div class="frnote">
+								<h2>Please enter the email address you’d like your password reset information sent to. </h2>
+						</div>
+						<div>
+							<input class ="email" type="email" name="email" id="email" placeholder= "&#61447; Enter Email" style="font-family:FontAwesome , 'Inter'" required>
+						</div>
+						
+						<div class="buttons">
+							<button class="submit-button" type="submit">Send</button>
+							<button class="back-button" type="submit">Back to Login</button>
+						</div>
+					</form>
+
+			</div>
+           
+    </body>
+</html>
+
 
 
 
