--- a/templates/forget_password/password_reset_complete.html
+++ b/templates/forget_password/password_reset_complete.html
@@ -1,11 +1,62 @@
+{% load static %}
+<!DOCTYPE html>
+<html>
+    <head>
+        <link rel="stylesheet" href="{% static 'login/resetpass.css' %}">
+        <title>LOGIN</title>
+        {% for message in messages %}
+        <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+            <strong>Message:</strong>{{ message }}
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        {% endfor %}
+    </head>
+    <body>
 
+        <div class="right-design">
 
+            <div class="middle-section">
+                <img src="{% static 'login/lspu.png' %}" class="lspu-logo">
+            </div>
 
-	<!--Reset Password-->
-	{% block content %}
-	
-        <form method="POST">
-           {% csrf_token %}   
-				<h1>You may now login</h1> 
-        </form>
+            
+        </div>
+
+        <div class="left-design">
+
+            <div>
+                <img src="{% static 'login/top.png' %}" class="top">
+            </div>
+
+            <div>
+                <img src="{% static 'login/bot.png' %}" class="bot">
+            </div>
+
+        </div>
+
+        <div class="login-form-container" style="height: 400px;">
+
+        <div class="title-container">
+          <img src="{% static 'login/check.png' %}" class="lock-logo" style="width: 150px;">
+          <h1 class="title" style="font-size: 25px; text-transform: uppercase;">Password Saved</h1> 
+          
+
+        </div>
+          <!--Reset Password-->
+
+                <form method="POST">
+                  {% csrf_token %}   
+                <h1 class="frnote" style="font-size: 15px;">You successfully changed your password. You may now login</h1> 
+
+                <div class="buttons">
+                  <button class="back-button" type="submit" style="margin-top: 20px;">Back to Login</button>
+                </div>
+                </form>
+         
+			  </div>
+    </body>
+</html>
+
 
