--- a/templates/forget_password/password_reset_confirm.html
+++ b/templates/forget_password/password_reset_confirm.html
@@ -1,26 +1,70 @@
-       <form method="POST">
-			
-           {% csrf_token %}   
-		   <div class="form-container" >
-			{% for field in form %}<!--name-->
-			<div>
-			<input class="form-field" {{ field }} >
-			{{field.label_tag }}<!--form-->
+{% load static %}
+<!DOCTYPE html>
+<html>
+    <head>
+        <link rel="stylesheet" href="{% static 'login/resetpass.css' %}">
+        <title>LOGIN</title>
+        {% for message in messages %}
+        <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+            <strong>Message:</strong>{{ message }}
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        {% endfor %}
+    </head>
+    <body>
 
-			</div>
-			{% endfor %}
+        <div class="right-design">
+
+            <div class="middle-section">
+                <img src="{% static 'login/lspu.png' %}" class="lspu-logo">
+            </div>
+
+            
+        </div>
+
+        <div class="left-design">
+
+            <div>
+                <img src="{% static 'login/top.png' %}" class="top">
+            </div>
+
+            <div>
+                <img src="{% static 'login/bot.png' %}" class="bot">
+            </div>
+
+        </div>
+
+
+        <div class="login-form-container" style="height: 400px; ">
+
+				<form method="POST">
+					<div class="title-container">
+                        <img src="{% static 'login/unlocked.png' %}" class="ccs-logo" style="width: 100px;">
+                        <h1 class="title">Create New Password</h1>
+					</div>
+
+						{% csrf_token %}   
+
+                    <!-- Additional labels for password fields -->
+                    <div class="frtext">
+                        <div>
+                            <h1 class="new-pass">New Password:</h1>
+                            <input class="form-field" type="password" name="new_password">
+                        </div>
+                        <div>
+                            <h1 class="new-pass">Confirm new password:</h1>
+                            <input class="form-field" type="password" name="confirm_password">
+                        </div>
+                    </div>
+                    <!-- Submit button -->
+                    <div class="buttons">			  
+                        <button class="frconfirm_submit" type="submit">Save Your Password</button>
+                    </div>
+            
+                </form>
 		</div>
-
-			<form>
-            <div class="create">
-			  <h1>Create New Password</h1>
-			  </div>
-			  <div class = "frtext">
-			  <h1>New Password:</h1>
-			  <h1>Confirm new password:</h1>
-			</div>			  
-			  <button class="frconfirm_submit" type="submit">Save Your Password</button>
-			</form>
-        </form>
-
-
+           
+	</body>
+</html>
