--- a/templates/forget_password/password_reset_done.html
+++ b/templates/forget_password/password_reset_done.html
@@ -1,13 +1,61 @@
 
 
+{% load static %}
+<!DOCTYPE html>
+<html>
+    <head>
+        <link rel="stylesheet" href="{% static 'login/resetpass.css' %}">
+        <title>LOGIN</title>
+        {% for message in messages %}
+        <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+            <strong>Message:</strong>{{ message }}
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        {% endfor %}
+    </head>
+    <body>
+
+        <div class="right-design">
+
+            <div class="middle-section">
+                <img src="{% static 'login/lspu.png' %}" class="lspu-logo">
+            </div>
+
+            
+        </div>
+
+        <div class="left-design">
+
+            <div>
+                <img src="{% static 'login/top.png' %}" class="top">
+            </div>
+
+            <div>
+                <img src="{% static 'login/bot.png' %}" class="bot">
+            </div>
+
+        </div>
+
+
+        <div class="login-form-container"  style="height: 400px;">
+	<!--Reset Password-->
+						<div class="title-container">
+							<img src="{% static 'login/email.png' %}" class="lock-logo">
+							<h1 class="title">Check Your Email</h1>
+						</div>
 
 	<!--Reset Password-->
 
-        <form method="POST">
-           {% csrf_token %}   
-				<h1>Check Your Email</h1> 
-				<h2>Please check your email. </h2>
-				<h2>We have sent you a link to</h2>
-				<h2>change your password.</h2> 
-        </form>
+						<form method="POST">
+							{% csrf_token %}   
+							<div class="frnote" style="font-size: 15px;">
+								<h2>Please check your email. We have sent you a link to change your password.</h2> 
+							</div>
+						</form>
 
+				</div>
+           
+    </body>
+</html>
