--- a/static/home/homestyle.css
+++ b/static/home/homestyle.css
@@ -128,6 +128,12 @@ h1 {
     width: 100px;
     height: 100px;
     object-fit: contain;
+    background-color: #f8f9fa;
+    padding: 15px 0;
+    border-bottom: 1px solid #dee2e6;
+    box-shadow: 2px 2px 3px 3px rgba(0, 0, 0, 0.1);
+    margin: 30px 70px 0; /* Adjusted margin for better responsiveness */
+    border-radius: 15px;
 }
 
 .item_information {
