--- a/static/notification/notificationstyle.css
+++ b/static/notification/notificationstyle.css
@@ -189,7 +189,7 @@ body{
     font-weight: 400;
     font-size: 35px;
     line-height: 41.83px;
-    text-align: right;
+    text-align: left;
     margin-left: 5rem;
     margin-top: -10rem;
  }
