--- a/templates/recents/recents.html
+++ b/templates/recents/recents.html
@@ -34,7 +34,7 @@
     <body>
         <div class="head">
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div id="nav_btn" class="rounded_corners">
+        <div id="nav_btn" class="containers">
             <button><a href="{% url 'home' %}" class="navbar-brand">Home</a></button>
             <button><a href="{% url 'recents' %}" class="active_tab" class="navbar-brand">Recents</a></button>
             <button><a href="{% url 'unreturned' %}" class="navbar-brand">Unreturned</a></button>
