--- a/static/recents/recentstyle.css
+++ b/static/recents/recentstyle.css
@@ -243,7 +243,7 @@ button a {
  
   nav {
      background-color: #f8f9fa;
-     padding: 15px 0;
+     padding: 30px 0;
      border-bottom: 1px solid #dee2e6;
      box-shadow: 2px 2px 3px 3px rgba(0, 0, 0, 0.1);
      margin: 30px 70px 0; /* Adjusted margin for better responsiveness */
@@ -258,7 +258,7 @@ button a {
     margin-right: 10px;
     margin-left: 10px;
     text-decoration: none; /* Remove underline */
-    position: relative; /* Position for the pseudo-element */
+    position: center; /* Position for the pseudo-element */
     transition: color 0.3s ease, font-weight 0.3s ease; /* Add a smooth color and font weight transition */
     gap: 15px;
   }
