--- a/static/notification/notificationstyle.css
+++ b/static/notification/notificationstyle.css
@@ -195,7 +195,7 @@ body{
 
  li{
     margin-left: 2rem;
-    margin-top: 5rem;
+    margin-top: .5rem;
  }
  .form-item {
     background-color: #f8f9fa;
