--- a/templates/forget_password/password_reset_complete.html
+++ b/templates/forget_password/password_reset_complete.html
@@ -51,7 +51,7 @@
                 <h1 class="frnote" style="font-size: 15px;">You successfully changed your password. You may now login</h1> 
 
                 <div class="buttons">
-                  <button class="back-button" type="submit" style="margin-top: 20px;">Back to Login</button>
+                  <a href="{% url 'login'%}" class="back-button" type="submit" style="margin-top: 20px;">Back to Login</a>
                 </div>
                 </form>
          
