--- a/templates/forget_password/password_reset_confirm.html
+++ b/templates/forget_password/password_reset_confirm.html
@@ -47,8 +47,12 @@
 
 						{% csrf_token %}   
 
+                        {% for field in form %}
+                            {{ field }}
+                        {% endfor %}
+                        <button type="submit">Reset Password</button>
                     <!-- Additional labels for password fields -->
-                    <div class="frtext">
+                    <!-- <div class="frtext">
                         <div>
                             <h1 class="new-pass">New Password:</h1>
                             <input class="form-field" type="password" name="new_password">
@@ -57,12 +61,12 @@
                             <h1 class="new-pass">Confirm new password:</h1>
                             <input class="form-field" type="password" name="confirm_password">
                         </div>
-                    </div>
+                    </div> -->
                     <!-- Submit button -->
-                    <div class="buttons">			  
+                    <!-- <div class="buttons">			  
                         <button class="frconfirm_submit" type="submit">Save Your Password</button>
                     </div>
-            
+             -->
                 </form>
 		</div>
            
