--- a/templates/userprofile/password_reset_confirm.html
+++ b/templates/userprofile/password_reset_confirm.html
@@ -7,9 +7,12 @@
 
 <body>
     <div class="content-section">
-        <form action = "{% url 'password_reset_confirm' uidb64=uidb64 token=token %}" method="POST">
+        <form method="POST">
             {% csrf_token %}
-            <fieldset class="form-group">
+            {{ form.as_p }}
+            <button type="submit">Reset Password</button>
+
+            <!-- <fieldset class="form-group">
                 <legend class="border-bottom mb-4">Reset Password</legend>
                 <div class="form-group">
                     <label for="id_password">New Password</label>
@@ -22,7 +25,7 @@
                 <div class="form-group"></div>
                     <button class="btn btn-outline-info" type="submit">Reset Password</button>
                 </div>
-            </fieldset>
+            </fieldset> -->
         </form>
     </div>
 </body>
