--- a/static/unreturned/unreturnedstyle.css
+++ b/static/unreturned/unreturnedstyle.css
@@ -211,7 +211,7 @@ html{
     
  .header .logo-right img{
     width: 95px;
-    padding: 3rem;
+    padding: 2rem;
  }
 
  /*navigations*/
@@ -250,7 +250,7 @@ html{
  .rounded_corners{
     background-color: #f8f9fa;
     padding: 13rem 0;
-    height: 150px;
+    height: 50rem;
     border: 2px solid #dee2e6;
     border-bottom: 1px solid #dee2e6;
     box-shadow: 2px 2px 3px 3px rgba(0, 0, 0, 0.1);
