--- a/static/unreturned/unreturnedstyle.css
+++ b/static/unreturned/unreturnedstyle.css
@@ -280,7 +280,7 @@ p{
 
 .quan{
     margin-left: 48rem;
-    margin-bottom: .5rem;
+    margin-bottom: 2rem;
 }
  .group{
     border: 2px solid gray;
@@ -289,6 +289,6 @@ p{
  }
 
  .btn{
-    margin-left: 75rem;
+    margin-left: 65rem;
     margin-bottom: .5rem;
  }
