--- a/static/unreturned/unreturnedstyle.css
+++ b/static/unreturned/unreturnedstyle.css
@@ -280,6 +280,7 @@ p{
 
 .quan{
     margin-left: 48rem;
+    margin-top: 2rem;
     margin-bottom: 2rem;
 }
  .group{
@@ -289,6 +290,6 @@ p{
  }
 
  .btn{
-    margin-left: 65rem;
+    margin-left: 70rem;
     margin-bottom: .5rem;
  }
