--- a/static/unreturned/unreturnedstyle.css
+++ b/static/unreturned/unreturnedstyle.css
@@ -281,7 +281,7 @@ p{
 .quan{
     margin-left: 48rem;
     margin-top: 2rem;
-    margin-bottom: -.5rem;
+    margin-bottom: 1rem;
 }
  .group{
     border: 2px solid gray;
