--- a/static/unreturned/unreturnedstyle.css
+++ b/static/unreturned/unreturnedstyle.css
@@ -267,6 +267,10 @@ html{
  }
 
  .disc{
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    grid-row-gap: 50px;
+    grid-column-gap: 10px;
     border: 2px solid black;
     margin-left: 16rem;
     margin-top: -10rem;
