--- a/static/unreturned/unreturnedstyle.css
+++ b/static/unreturned/unreturnedstyle.css
@@ -248,9 +248,9 @@ html{
  }
 
  .rounded_corners{
-    display:inline;
-    grid-template-columns: auto auto auto auto;
-    row-gap: 10px;
+    display:block;
+    width: 100px;
+    height: 100px;
     background-color: #f8f9fa;
     padding: 13rem 0;
     border: 2px solid #dee2e6;
