--- a/templates/notification/notification.html
+++ b/templates/notification/notification.html
@@ -63,6 +63,7 @@
 
     <p>Please return the items after each use. Thanks!</p>
     {% else %}
+    <div></div>
     <p>No unreturned items at the moment.</p>
     {% endif %}
   </div>
